--- a/style.css
+++ b/style.css
@@ -29,6 +29,20 @@ body {
     min-height: 60vh;
 }
 
+@media (max-width: 1000px){
+    .grid {
+        /* background-color: lightcoral; */
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        margin: 0 5vw;
+        padding: 0;
+        /* min-height: 0; */
+    }
+}
+
 .box{
     font-family: "Macondo", cursive;
     text-align: center;
